--- a/templates/YouTubeMP3modoki.html
+++ b/templates/YouTubeMP3modoki.html
@@ -7,7 +7,7 @@
 	<!-- Manifest -->
 	<meta name="theme-color" content="#f0f0f0">
 	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="manifest" href="manifest.json">
+	<link rel="manifest" href="https://kakaomemes.github.io/render-yt-dlp/manifest.json">
 	<link rel="manifest" href="manifest.webmanifest">
  
 	<!-- OGP -->
@@ -34,7 +34,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/YouTubeMP3modoki/assets/style.css">
+	<link rel="stylesheet" href="https://kakaomemes.github.io/YouTubeMP3modoki/assets/style.css">
  
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-154191901-1"></script>
@@ -1259,7 +1259,7 @@
 	<nav id="navigation" class="navbar navbar-expand-md navbar-light bg-white sticky-top">
 		<div class="container">
 			<a class="navbar-brand py-0" href="./">
-				<img id="logo" src="/YouTubeMP3modoki/assets/images/logo_summer.png">
+				<img id="logo" src="https://kakaomemes.github.io/YouTubeMP3modoki/assets/images/logo_summer.png">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="ナビゲーションの切替">
 				<span class="navbar-toggler-icon"></span>
