--- a/templates/YouTubeMP3modoki.html
+++ b/templates/YouTubeMP3modoki.html
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://kakaomames.github.io/YouTubeMP3modoki/assets/style.css">
+	<link rel="stylesheet" href="https://kakaomames.github.io/YouTubeMP3modoki/assets/index.DI3dS5Mr.css">
  
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-154191901-1"></script>
